feat(payment): 实现支付宝支付网关及相关功能
- 新增 AlipayPaymentGateway 支付网关实现，支持 APP 支付、退款、订单查询、转账功能
- 使用支付宝 Open API SDK，保障支付与退款流程的异常捕获和错误处理
- 实现支付结果通知验签和交易状态判断，确保回调安全准确
- 添加支付请求参数构造和响应解析，包括订单号、金额、商品描述等
- 提供退款请求与响应封装，支持退款原因为可选参数
- 实现转账功能，支持“转账到支付宝账户”接口，包含收款方身份验证参数
- 实现订单查询接口，可主动查询交易状态并返回交易详情
- 新增 Eagle Elasticsearch 通用仓库基类 BaseElasticSearchRepository，封装 CRUD、分页搜索及高亮回写逻辑
- 统一使用 Spring Data Elasticsearch 操作简化业务代码，提高复用性和一致性
- 新增 MyBatis Plus 通用基础接口 BaseMapperPlus，扩展批量根据 ID 查询方法
- 优化基础实体类 BaseAggregateRoot 和 BaseEntity，加入无参构造器及使用规范注释，完善审计和乐观锁支持
- 多个 starter 模块新增相关依赖配置