@@ -8,16 +8,20 @@ import org.springframework.security.authentication.AbstractAuthenticationToken;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.oauth2.jwt.Jwt;
-import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationToken;
 
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
- * JWT 认证转换器，将 JWT Token 转换为 Spring Security 的 Authentication 对象
- * 从 JWT Claims 中提取用户信息和权限，构建 EagleUser 对象
+ * JWT 认证转换器：将 JWT Token 转换为以 {@link EagleUser} 为 Principal 的 {@link EagleAuthentication}。
+ *
+ * <p>从 JWT Claims 中提取用户信息，构建 {@link EagleUser} 后存入 {@link EagleAuthentication}，
+ * 使得 SpEL 权限表达式可直接访问用户字段：
+ * <pre>{@code
+ * @PreAuthorize("#userId == authentication.principal.id")
+ * @PreAuthorize("authentication.principal.deptId == #deptId")
+ * }</pre>
  *
  * @author 孙士雄
  */
@@ -25,46 +29,29 @@ public class EagleJwtAuthenticationConverter implements Converter<Jwt, AbstractA
 
     @Override
     public AbstractAuthenticationToken convert(@NonNull Jwt jwt) {
-        // 1. 提取权限
         Collection<GrantedAuthority> authorities = extractAuthorities(jwt);
 
-        // 2. 从 JWT Claims 中提取用户信息
         Long userId = jwt.getClaim(SecurityConstants.DETAILS_USER_ID);
         String username = jwt.getClaim(SecurityConstants.DETAILS_USERNAME);
         String name = jwt.getClaim(SecurityConstants.DETAILS_USER_NAME);
-        Long deptId = jwt.getClaim(SecurityConstants.DETAILS_DEP_ID);
-        String deptName = jwt.getClaim(SecurityConstants.DETAILS_DEP_NAME);
+        Long deptId = jwt.getClaim(SecurityConstants.DETAILS_DEPT_ID);
+        String deptName = jwt.getClaim(SecurityConstants.DETAILS_DEPT_NAME);
         String phone = jwt.getClaim(SecurityConstants.DETAILS_PHONE);
 
-        // 3. 构建 EagleUser 对象（资源服务器不需要密码）
-        EagleUser user = new EagleUser(
-                userId,
-                username,
-                "",
-                name,
-                deptId,
-                deptName,
-                phone,
-                authorities
-        );
-
-        // 4. 返回 JwtAuthenticationToken，Principal 为 EagleUser
-        return new JwtAuthenticationToken(jwt, authorities, username);
+        EagleUser user = new EagleUser(userId, username, "", name, deptId, deptName, phone, authorities);
+        return new EagleAuthentication(jwt, user, authorities);
     }
 
     /**
-     * 从 JWT 中提取权限信息
-     *
-     * @param jwt JWT Token
-     * @return 权限集合
+     * 从 JWT Claims 中提取角色列表，添加 {@code ROLE_} 前缀后转为 {@link GrantedAuthority}。
      */
-    private Collection<GrantedAuthority> extractAuthorities(Jwt jwt) {
+    static Collection<GrantedAuthority> extractAuthorities(Jwt jwt) {
         List<String> roles = jwt.getClaim(SecurityConstants.DETAILS_ROLES);
         if (roles == null || roles.isEmpty()) {
             return Collections.emptyList();
         }
         return roles.stream()
                 .map(role -> new SimpleGrantedAuthority(SecurityConstants.ROLE_START + role))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
